# ChemicalLab

Lab04/: .com-unity-codely.json
Lab04/.codely-cli/auto-saves/: chat-auto-save-2026-07-21-13-04-02-118-3d-model-generator-ppluc1.json
Lab04/.codely-cli/extensions/TJGenerators/: .codely-cli-extension-install.json  gemini-extension.json  manifest.json
Lab04/.codely.packages/cn.tuanjie.codely.bridge@1.0.71/: .gitattributes  CHANGELOG.md  README.md  package.json
Lab04/.codely.packages/cn.tuanjie.codely.bridge@1.0.71/Plugins/Win/NativeBrowser/: CMakeLists.txt  build.ps1
Lab04/.codely.packages/cn.tuanjie.codely.bridge@1.0.71/Plugins/Win/NativeBrowser/include/: NativeBrowser.h
Lab04/.codely.packages/cn.tuanjie.codely.bridge@1.0.71/Plugins/Win/NativeBrowser/src/: BrowserInstance.cpp  BrowserInstance.h  NativeBrowser.cpp  STAThread.cpp  STAThread.h  WndProcHook.cpp  WndProcHook.h
Lab04/Assets/: AllihnCDR (1).prefab  RefluxCDR.prefab  SpiralTube.cs  StraightCDR.prefab
Lab04/Assets/EquipmentModel/: Beaker.prefab  Erlenmeyer_flask.prefab  Graduated_Cylinder.prefab  NaOH瓶.prefab
Lab04/Assets/Fonts/: Deng SDF.asset
Lab04/Assets/LiquidVolumePro/: README FIRST.txt
Lab04/Assets/Material/: Glass_Inner.mat  Glass_Outer.mat
Lab04/Assets/Materials/: Laboratory03_Floor_BaseMap.mat  Laboratory03_Glass_BaseMap.mat  Laboratory03_Other_01_BaseMap.mat  Laboratory03_Others_BaseMap.mat  Laboratory03_Wood_BaseMap.mat  Liquid 3.mat  Liquid.mat  Material #29x.mat  New Material.mat  Wall.mat  lambert1.mat  roof and blub_other02_BaseMap.mat  water.mat
Lab04/Assets/Prefabs/: HoverContainer.prefab  StartButton.prefab
Lab04/Assets/Scenes/: Laboratory Scene.unity
Lab04/Assets/Settings/: UniversalRenderPipelineGlobalSettings.asset
Lab04/Assets/TJGenerators/: DefaultWhite.mat
Lab04/Assets/UI Toolkit/: PanelSettings.asset  mainMenu.uxml
Lab04/Assets/labPrefabs/: Beaker.prefab  Buchner_1000ml.prefab  Buchner_100ml.prefab  Buchner_250ml.prefab  Buchner_500ml.prefab  Flask.prefab  GraduatedCylinder_1000ml.prefab  GraduatedCylinder_100ml.prefab  GraduatedCylinder_250ml.prefab  GraduatedCylinder_500ml.prefab  Particle System.prefab  Potion1.prefab  Potion2.prefab  Potion3.prefab  Potion4.prefab  Potion5.prefab  Potion6.prefab  PotionOpen.prefab
Lab04/ProjectSettings/: ProjectSettings.asset  TagManager.asset
Lab04/Unity3D_Liquid Volume Pro 2_V11.1.7_liquid_color/: 捌零玖零CG素材.url
(+463 files in other folders)
